--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gatsby-source-ghost": "5.0.0",
     "gatsby-transformer-sharp": "4.15.1",
     "lodash": "4.17.21",
+    "netlify-cli": "^10.17.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
